src/generated/grammar/fhirpathParser.ts
// Generated from grammar/fhirpath.g4 by ANTLR 4.9.0-SNAPSHOT

import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { fhirpathListener } from "./fhirpathListener";
import { fhirpathVisitor } from "./fhirpathVisitor";

export class fhirpathParser extends Parser {
  public static readonly T__0 = 1;
  public static readonly T__1 = 2;
  public static readonly T__2 = 3;
  public static readonly T__3 = 4;
  public static readonly T__4 = 5;
  public static readonly T__5 = 6;
  public static readonly T__6 = 7;
  public static readonly T__7 = 8;
  public static readonly T__8 = 9;
  public static readonly T__9 = 10;
  public static readonly T__10 = 11;
  public static readonly T__11 = 12;
  public static readonly T__12 = 13;
  public static readonly T__13 = 14;
  public static readonly T__14 = 15;
  public static readonly T__15 = 16;
  public static readonly T__16 = 17;
  public static readonly T__17 = 18;
  public static readonly T__18 = 19;
  public static readonly T__19 = 20;
  public static readonly T__20 = 21;
  public static readonly T__21 = 22;
  public static readonly T__22 = 23;
  public static readonly T__23 = 24;
  public static readonly T__24 = 25;
  public static readonly T__25 = 26;
  public static readonly T__26 = 27;
  public static readonly T__27 = 28;
  public static readonly T__28 = 29;
  public static readonly T__29 = 30;
  public static readonly T__30 = 31;
  public static readonly T__31 = 32;
  public static readonly T__32 = 33;
  public static readonly T__33 = 34;
  public static readonly T__34 = 35;
  public static readonly T__35 = 36;
  public static readonly T__36 = 37;
  public static readonly T__37 = 38;
  public static readonly T__38 = 39;
  public static readonly T__39 = 40;
  public static readonly T__40 = 41;
  public static readonly T__41 = 42;
  public static readonly T__42 = 43;
  public static readonly T__43 = 44;
  public static readonly T__44 = 45;
  public static readonly T__45 = 46;
  public static readonly T__46 = 47;
  public static readonly T__47 = 48;
  public static readonly T__48 = 49;
  public static readonly T__49 = 50;
  public static readonly T__50 = 51;
  public static readonly T__51 = 52;
  public static readonly T__52 = 53;
  public static readonly T__53 = 54;
  public static readonly DATE = 55;
  public static readonly DATETIME = 56;
  public static readonly TIME = 57;
  public static readonly IDENTIFIER = 58;
  public static readonly DELIMITEDIDENTIFIER = 59;
  public static readonly STRING = 60;
  public static readonly NUMBER = 61;
  public static readonly LONGNUMBER = 62;
  public static readonly WS = 63;
  public static readonly COMMENT = 64;
  public static readonly LINE_COMMENT = 65;
  public static readonly RULE_entireExpression = 0;
  public static readonly RULE_expression = 1;
  public static readonly RULE_term = 2;
  public static readonly RULE_literal = 3;
  public static readonly RULE_externalConstant = 4;
  public static readonly RULE_invocation = 5;
  public static readonly RULE_function = 6;
  public static readonly RULE_paramList = 7;
  public static readonly RULE_quantity = 8;
  public static readonly RULE_unit = 9;
  public static readonly RULE_dateTimePrecision = 10;
  public static readonly RULE_pluralDateTimePrecision = 11;
  public static readonly RULE_typeSpecifier = 12;
  public static readonly RULE_qualifiedIdentifier = 13;
  public static readonly RULE_identifier = 14;
  // tslint:disable:no-trailing-whitespace
  public static readonly ruleNames: string[] = [
    "entireExpression",
    "expression",
    "term",
    "literal",
    "externalConstant",
    "invocation",
    "function",
    "paramList",
    "quantity",
    "unit",
    "dateTimePrecision",
    "pluralDateTimePrecision",
    "typeSpecifier",
    "qualifiedIdentifier",
    "identifier",
  ];

  private static readonly _LITERAL_NAMES: Array<string | undefined> = [
    undefined,
    "'.'",
    "'['",
    "']'",
    "'+'",
    "'-'",
    "'*'",
    "'/'",
    "'div'",
    "'mod'",
    "'&'",
    "'is'",
    "'as'",
    "'|'",
    "'<='",
    "'<'",
    "'>'",
    "'>='",
    "'='",
    "'~'",
    "'!='",
    "'!~'",
    "'in'",
    "'contains'",
    "'and'",
    "'or'",
    "'xor'",
    "'implies'",
    "'('",
    "')'",
    "'{'",
    "'}'",
    "'true'",
    "'false'",
    "'%'",
    "'$this'",
    "'$index'",
    "'$total'",
    "','",
    "'year'",
    "'month'",
    "'week'",
    "'day'",
    "'hour'",
    "'minute'",
    "'second'",
    "'millisecond'",
    "'years'",
    "'months'",
    "'weeks'",
    "'days'",
    "'hours'",
    "'minutes'",
    "'seconds'",
    "'milliseconds'",
  ];
  private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    "DATE",
    "DATETIME",
    "TIME",
    "IDENTIFIER",
    "DELIMITEDIDENTIFIER",
    "STRING",
    "NUMBER",
    "LONGNUMBER",
    "WS",
    "COMMENT",
    "LINE_COMMENT",
  ];
  public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(
    fhirpathParser._LITERAL_NAMES,
    fhirpathParser._SYMBOLIC_NAMES,
    [],
  );

  // @Override
  // @NotNull
  public get vocabulary(): Vocabulary {
    return fhirpathParser.VOCABULARY;
  }
  // tslint:enable:no-trailing-whitespace

  // @Override
  public get grammarFileName(): string {
    return "fhirpath.g4";
  }

  // @Override
  public get ruleNames(): string[] {
    return fhirpathParser.ruleNames;
  }

  // @Override
  public get serializedATN(): string {
    return fhirpathParser._serializedATN;
  }

  protected createFailedPredicateException(
    predicate?: string,
    message?: string,
  ): FailedPredicateException {
    return new FailedPredicateException(this, predicate, message);
  }

  constructor(input: TokenStream) {
    super(input);
    this._interp = new ParserATNSimulator(fhirpathParser._ATN, this);
  }
  // @RuleVersion(0)
  public entireExpression(): EntireExpressionContext {
    let _localctx: EntireExpressionContext = new EntireExpressionContext(
      this._ctx,
      this.state,
    );
    this.enterRule(_localctx, 0, fhirpathParser.RULE_entireExpression);
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 30;
        this.expression(0);
        this.state = 31;
        this.match(fhirpathParser.EOF);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }

  public expression(): ExpressionContext;
  public expression(_p: number): ExpressionContext;
  // @RuleVersion(0)
  public expression(_p?: number): ExpressionContext {
    if (_p === undefined) {
      _p = 0;
    }

    let _parentctx: ParserRuleContext = this._ctx;
    let _parentState: number = this.state;
    let _localctx: ExpressionContext = new ExpressionContext(
      this._ctx,
      _parentState,
    );
    let _prevctx: ExpressionContext = _localctx;
    let _startState: number = 2;
    this.enterRecursionRule(_localctx, 2, fhirpathParser.RULE_expression, _p);
    let _la: number;
    try {
      let _alt: number;
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 37;
        this._errHandler.sync(this);
        switch (this._input.LA(1)) {
          case fhirpathParser.T__10:
          case fhirpathParser.T__11:
          case fhirpathParser.T__21:
          case fhirpathParser.T__22:
          case fhirpathParser.T__27:
          case fhirpathParser.T__29:
          case fhirpathParser.T__31:
          case fhirpathParser.T__32:
          case fhirpathParser.T__33:
          case fhirpathParser.T__34:
          case fhirpathParser.T__35:
          case fhirpathParser.T__36:
          case fhirpathParser.DATE:
          case fhirpathParser.DATETIME:
          case fhirpathParser.TIME:
          case fhirpathParser.IDENTIFIER:
          case fhirpathParser.DELIMITEDIDENTIFIER:
          case fhirpathParser.STRING:
          case fhirpathParser.NUMBER:
          case fhirpathParser.LONGNUMBER:
            {
              _localctx = new TermExpressionContext(_localctx);
              this._ctx = _localctx;
              _prevctx = _localctx;

              this.state = 34;
              this.term();
            }
            break;
          case fhirpathParser.T__3:
          case fhirpathParser.T__4:
            {
              _localctx = new PolarityExpressionContext(_localctx);
              this._ctx = _localctx;
              _prevctx = _localctx;
              this.state = 35;
              _la = this._input.LA(1);
              if (
                !(_la === fhirpathParser.T__3 || _la === fhirpathParser.T__4)
              ) {
                this._errHandler.recoverInline(this);
              } else {
                if (this._input.LA(1) === Token.EOF) {
                  this.matchedEOF = true;
                }

                this._errHandler.reportMatch(this);
                this.consume();
              }
              this.state = 36;
              this.expression(11);
            }
            break;
          default:
            throw new NoViableAltException(this);
        }
        this._ctx._stop = this._input.tryLT(-1);
        this.state = 79;
        this._errHandler.sync(this);
        _alt = this.interpreter.adaptivePredict(this._input, 2, this._ctx);
        while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
          if (_alt === 1) {
            if (this._parseListeners != null) {
              this.triggerExitRuleEvent();
            }
            _prevctx = _localctx;
            {
              this.state = 77;
              this._errHandler.sync(this);
              switch (
                this.interpreter.adaptivePredict(this._input, 1, this._ctx)
              ) {
                case 1:
                  {
                    _localctx = new MultiplicativeExpressionContext(
                      new ExpressionContext(_parentctx, _parentState),
                    );
                    this.pushNewRecursionContext(
                      _localctx,
                      _startState,
                      fhirpathParser.RULE_expression,
                    );
                    this.state = 39;
                    if (!this.precpred(this._ctx, 10)) {
                      throw this.createFailedPredicateException(
                        "this.precpred(this._ctx, 10)",
                      );
                    }
                    this.state = 40;
                    _la = this._input.LA(1);
                    if (
                      !(
                        (_la & ~0x1f) === 0 &&
                        ((1 << _la) &
                          ((1 << fhirpathParser.T__5) |
                            (1 << fhirpathParser.T__6) |
                            (1 << fhirpathParser.T__7) |
                            (1 << fhirpathParser.T__8))) !==
                          0
                      )
                    ) {
                      this._errHandler.recoverInline(this);
                    } else {
                      if (this._input.LA(1) === Token.EOF) {
                        this.matchedEOF = true;
                      }

                      this._errHandler.reportMatch(this);
                      this.consume();
                    }
                    this.state = 41;
                    this.expression(11);
                  }
                  break;

                case 2:
                  {
                    _localctx = new AdditiveExpressionContext(
                      new ExpressionContext(_parentctx, _parentState),
                    );
                    this.pushNewRecursionContext(
                      _localctx,
                      _startState,
                      fhirpathParser.RULE_expression,
                    );
                    this.state = 42;
                    if (!this.precpred(this._ctx, 9)) {
                      throw this.createFailedPredicateException(
                        "this.precpred(this._ctx, 9)",
                      );
                    }
                    this.state = 43;
                    _la = this._input.LA(1);
                    if (
                      !(
                        (_la & ~0x1f) === 0 &&
                        ((1 << _la) &
                          ((1 << fhirpathParser.T__3) |
                            (1 << fhirpathParser.T__4) |
                            (1 << fhirpathParser.T__9))) !==
                          0
                      )
                    ) {
                      this._errHandler.recoverInline(this);
                    } else {
                      if (this._input.LA(1) === Token.EOF) {
                        this.matchedEOF = true;
                      }

                      this._errHandler.reportMatch(this);
                      this.consume();
                    }
                    this.state = 44;
                    this.expression(10);
                  }
                  break;

                case 3:
                  {
                    _localctx = new UnionExpressionContext(
                      new ExpressionContext(_parentctx, _parentState),
                    );
                    this.pushNewRecursionContext(
                      _localctx,
                      _startState,
                      fhirpathParser.RULE_expression,
                    );
                    this.state = 45;
                    if (!this.precpred(this._ctx, 7)) {
                      throw this.createFailedPredicateException(
                        "this.precpred(this._ctx, 7)",
                      );
                    }
                    this.state = 46;
                    this.match(fhirpathParser.T__12);
                    this.state = 47;
                    this.expression(8);
                  }
                  break;

                case 4:
                  {
                    _localctx = new InequalityExpressionContext(
                      new ExpressionContext(_parentctx, _parentState),
                    );
                    this.pushNewRecursionContext(
                      _localctx,
                      _startState,
                      fhirpathParser.RULE_expression,
                    );
                    this.state = 48;
                    if (!this.precpred(this._ctx, 6)) {
                      throw this.createFailedPredicateException(
                        "this.precpred(this._ctx, 6)",
                      );
                    }
                    this.state = 49;
                    _la = this._input.LA(1);
                    if (
                      !(
                        (_la & ~0x1f) === 0 &&
                        ((1 << _la) &
                          ((1 << fhirpathParser.T__13) |
                            (1 << fhirpathParser.T__14) |
                            (1 << fhirpathParser.T__15) |
                            (1 << fhirpathParser.T__16))) !==
                          0
                      )
                    ) {
                      this._errHandler.recoverInline(this);
                    } else {
                      if (this._input.LA(1) === Token.EOF) {
                        this.matchedEOF = true;
                      }

                      this._errHandler.reportMatch(this);
                      this.consume();
                    }
                    this.state = 50;
                    this.expression(7);
                  }
                  break;

                case 5:
                  {
                    _localctx = new EqualityExpressionContext(
                      new ExpressionContext(_parentctx, _parentState),
                    );
                    this.pushNewRecursionContext(
                      _localctx,
                      _startState,
                      fhirpathParser.RULE_expression,
                    );
                    this.state = 51;
                    if (!this.precpred(this._ctx, 5)) {
                      throw this.createFailedPredicateException(
                        "this.precpred(this._ctx, 5)",
                      );
                    }
                    this.state = 52;
                    _la = this._input.LA(1);
                    if (
                      !(
                        (_la & ~0x1f) === 0 &&
                        ((1 << _la) &
                          ((1 << fhirpathParser.T__17) |
                            (1 << fhirpathParser.T__18) |
                            (1 << fhirpathParser.T__19) |
                            (1 << fhirpathParser.T__20))) !==
                          0
                      )
                    ) {
                      this._errHandler.recoverInline(this);
                    } else {
                      if (this._input.LA(1) === Token.EOF) {
                        this.matchedEOF = true;
                      }

                      this._errHandler.reportMatch(this);
                      this.consume();
                    }
                    this.state = 53;
                    this.expression(6);
                  }
                  break;

                case 6:
                  {
                    _localctx = new MembershipExpressionContext(
                      new ExpressionContext(_parentctx, _parentState),
                    );
                    this.pushNewRecursionContext(
                      _localctx,
                      _startState,
                      fhirpathParser.RULE_expression,
                    );
                    this.state = 54;
                    if (!this.precpred(this._ctx, 4)) {
                      throw this.createFailedPredicateException(
                        "this.precpred(this._ctx, 4)",
                      );
                    }
                    this.state = 55;
                    _la = this._input.LA(1);
                    if (
                      !(
                        _la === fhirpathParser.T__21 ||
                        _la === fhirpathParser.T__22
                      )
                    ) {
                      this._errHandler.recoverInline(this);
                    } else {
                      if (this._input.LA(1) === Token.EOF) {
                        this.matchedEOF = true;
                      }

                      this._errHandler.reportMatch(this);
                      this.consume();
                    }
                    this.state = 56;
                    this.expression(5);
                  }
                  break;

                case 7:
                  {
                    _localctx = new AndExpressionContext(
                      new ExpressionContext(_parentctx, _parentState),
                    );
                    this.pushNewRecursionContext(
                      _localctx,
                      _startState,
                      fhirpathParser.RULE_expression,
                    );
                    this.state = 57;
                    if (!this.precpred(this._ctx, 3)) {
                      throw this.createFailedPredicateException(
                        "this.precpred(this._ctx, 3)",
                      );
                    }
                    this.state = 58;
                    this.match(fhirpathParser.T__23);
                    this.state = 59;
                    this.expression(4);
                  }
                  break;

                case 8:
                  {
                    _localctx = new OrExpressionContext(
                      new ExpressionContext(_parentctx, _parentState),
                    );
                    this.pushNewRecursionContext(
                      _localctx,
                      _startState,
                      fhirpathParser.RULE_expression,
                    );
                    this.state = 60;
                    if (!this.precpred(this._ctx, 2)) {
                      throw this.createFailedPredicateException(
                        "this.precpred(this._ctx, 2)",
                      );
                    }
                    this.state = 61;
                    _la = this._input.LA(1);
                    if (
                      !(
                        _la === fhirpathParser.T__24 ||
                        _la === fhirpathParser.T__25
                      )
                    ) {
                      this._errHandler.recoverInline(this);
                    } else {
                      if (this._input.LA(1) === Token.EOF) {
                        this.matchedEOF = true;
                      }

                      this._errHandler.reportMatch(this);
                      this.consume();
                    }
                    this.state = 62;
                    this.expression(3);
                  }
                  break;

                case 9:
                  {
                    _localctx = new ImpliesExpressionContext(
                      new ExpressionContext(_parentctx, _parentState),
                    );
                    this.pushNewRecursionContext(
                      _localctx,
                      _startState,
                      fhirpathParser.RULE_expression,
                    );
                    this.state = 63;
                    if (!this.precpred(this._ctx, 1)) {
                      throw this.createFailedPredicateException(
                        "this.precpred(this._ctx, 1)",
                      );
                    }
                    this.state = 64;
                    this.match(fhirpathParser.T__26);
                    this.state = 65;
                    this.expression(2);
                  }
                  break;

                case 10:
                  {
                    _localctx = new InvocationExpressionContext(
                      new ExpressionContext(_parentctx, _parentState),
                    );
                    this.pushNewRecursionContext(
                      _localctx,
                      _startState,
                      fhirpathParser.RULE_expression,
                    );
                    this.state = 66;
                    if (!this.precpred(this._ctx, 13)) {
                      throw this.createFailedPredicateException(
                        "this.precpred(this._ctx, 13)",
                      );
                    }
                    this.state = 67;
                    this.match(fhirpathParser.T__0);
                    this.state = 68;
                    this.invocation();
                  }
                  break;

                case 11:
                  {
                    _localctx = new IndexerExpressionContext(
                      new ExpressionContext(_parentctx, _parentState),
                    );
                    this.pushNewRecursionContext(
                      _localctx,
                      _startState,
                      fhirpathParser.RULE_expression,
                    );
                    this.state = 69;
                    if (!this.precpred(this._ctx, 12)) {
                      throw this.createFailedPredicateException(
                        "this.precpred(this._ctx, 12)",
                      );
                    }
                    this.state = 70;
                    this.match(fhirpathParser.T__1);
                    this.state = 71;
                    this.expression(0);
                    this.state = 72;
                    this.match(fhirpathParser.T__2);
                  }
                  break;

                case 12:
                  {
                    _localctx = new TypeExpressionContext(
                      new ExpressionContext(_parentctx, _parentState),
                    );
                    this.pushNewRecursionContext(
                      _localctx,
                      _startState,
                      fhirpathParser.RULE_expression,
                    );
                    this.state = 74;
                    if (!this.precpred(this._ctx, 8)) {
                      throw this.createFailedPredicateException(
                        "this.precpred(this._ctx, 8)",
                      );
                    }
                    this.state = 75;
                    _la = this._input.LA(1);
                    if (
                      !(
                        _la === fhirpathParser.T__10 ||
                        _la === fhirpathParser.T__11
                      )
                    ) {
                      this._errHandler.recoverInline(this);
                    } else {
                      if (this._input.LA(1) === Token.EOF) {
                        this.matchedEOF = true;
                      }

                      this._errHandler.reportMatch(this);
                      this.consume();
                    }
                    this.state = 76;
                    this.typeSpecifier();
                  }
                  break;
              }
            }
          }
          this.state = 81;
          this._errHandler.sync(this);
          _alt = this.interpreter.adaptivePredict(this._input, 2, this._ctx);
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.unrollRecursionContexts(_parentctx);
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public term(): TermContext {
    let _localctx: TermContext = new TermContext(this._ctx, this.state);
    this.enterRule(_localctx, 4, fhirpathParser.RULE_term);
    try {
      this.state = 89;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case fhirpathParser.T__10:
        case fhirpathParser.T__11:
        case fhirpathParser.T__21:
        case fhirpathParser.T__22:
        case fhirpathParser.T__34:
        case fhirpathParser.T__35:
        case fhirpathParser.T__36:
        case fhirpathParser.IDENTIFIER:
        case fhirpathParser.DELIMITEDIDENTIFIER:
          _localctx = new InvocationTermContext(_localctx);
          this.enterOuterAlt(_localctx, 1);
          {
            this.state = 82;
            this.invocation();
          }
          break;
        case fhirpathParser.T__29:
        case fhirpathParser.T__31:
        case fhirpathParser.T__32:
        case fhirpathParser.DATE:
        case fhirpathParser.DATETIME:
        case fhirpathParser.TIME:
        case fhirpathParser.STRING:
        case fhirpathParser.NUMBER:
        case fhirpathParser.LONGNUMBER:
          _localctx = new LiteralTermContext(_localctx);
          this.enterOuterAlt(_localctx, 2);
          {
            this.state = 83;
            this.literal();
          }
          break;
        case fhirpathParser.T__33:
          _localctx = new ExternalConstantTermContext(_localctx);
          this.enterOuterAlt(_localctx, 3);
          {
            this.state = 84;
            this.externalConstant();
          }
          break;
        case fhirpathParser.T__27:
          _localctx = new ParenthesizedTermContext(_localctx);
          this.enterOuterAlt(_localctx, 4);
          {
            this.state = 85;
            this.match(fhirpathParser.T__27);
            this.state = 86;
            this.expression(0);
            this.state = 87;
            this.match(fhirpathParser.T__28);
          }
          break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public literal(): LiteralContext {
    let _localctx: LiteralContext = new LiteralContext(this._ctx, this.state);
    this.enterRule(_localctx, 6, fhirpathParser.RULE_literal);
    let _la: number;
    try {
      this.state = 101;
      this._errHandler.sync(this);
      switch (this.interpreter.adaptivePredict(this._input, 4, this._ctx)) {
        case 1:
          _localctx = new NullLiteralContext(_localctx);
          this.enterOuterAlt(_localctx, 1);
          {
            this.state = 91;
            this.match(fhirpathParser.T__29);
            this.state = 92;
            this.match(fhirpathParser.T__30);
          }
          break;

        case 2:
          _localctx = new BooleanLiteralContext(_localctx);
          this.enterOuterAlt(_localctx, 2);
          {
            this.state = 93;
            _la = this._input.LA(1);
            if (
              !(_la === fhirpathParser.T__31 || _la === fhirpathParser.T__32)
            ) {
              this._errHandler.recoverInline(this);
            } else {
              if (this._input.LA(1) === Token.EOF) {
                this.matchedEOF = true;
              }

              this._errHandler.reportMatch(this);
              this.consume();
            }
          }
          break;

        case 3:
          _localctx = new StringLiteralContext(_localctx);
          this.enterOuterAlt(_localctx, 3);
          {
            this.state = 94;
            this.match(fhirpathParser.STRING);
          }
          break;

        case 4:
          _localctx = new NumberLiteralContext(_localctx);
          this.enterOuterAlt(_localctx, 4);
          {
            this.state = 95;
            this.match(fhirpathParser.NUMBER);
          }
          break;

        case 5:
          _localctx = new LongNumberLiteralContext(_localctx);
          this.enterOuterAlt(_localctx, 5);
          {
            this.state = 96;
            this.match(fhirpathParser.LONGNUMBER);
          }
          break;

        case 6:
          _localctx = new DateLiteralContext(_localctx);
          this.enterOuterAlt(_localctx, 6);
          {
            this.state = 97;
            this.match(fhirpathParser.DATE);
          }
          break;

        case 7:
          _localctx = new DateTimeLiteralContext(_localctx);
          this.enterOuterAlt(_localctx, 7);
          {
            this.state = 98;
            this.match(fhirpathParser.DATETIME);
          }
          break;

        case 8:
          _localctx = new TimeLiteralContext(_localctx);
          this.enterOuterAlt(_localctx, 8);
          {
            this.state = 99;
            this.match(fhirpathParser.TIME);
          }
          break;

        case 9:
          _localctx = new QuantityLiteralContext(_localctx);
          this.enterOuterAlt(_localctx, 9);
          {
            this.state = 100;
            this.quantity();
          }
          break;
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public externalConstant(): ExternalConstantContext {
    let _localctx: ExternalConstantContext = new ExternalConstantContext(
      this._ctx,
      this.state,
    );
    this.enterRule(_localctx, 8, fhirpathParser.RULE_externalConstant);
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 103;
        this.match(fhirpathParser.T__33);
        this.state = 106;
        this._errHandler.sync(this);
        switch (this._input.LA(1)) {
          case fhirpathParser.T__10:
          case fhirpathParser.T__11:
          case fhirpathParser.T__21:
          case fhirpathParser.T__22:
          case fhirpathParser.IDENTIFIER:
          case fhirpathParser.DELIMITEDIDENTIFIER:
            {
              this.state = 104;
              this.identifier();
            }
            break;
          case fhirpathParser.STRING:
            {
              this.state = 105;
              this.match(fhirpathParser.STRING);
            }
            break;
          default:
            throw new NoViableAltException(this);
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public invocation(): InvocationContext {
    let _localctx: InvocationContext = new InvocationContext(
      this._ctx,
      this.state,
    );
    this.enterRule(_localctx, 10, fhirpathParser.RULE_invocation);
    try {
      this.state = 113;
      this._errHandler.sync(this);
      switch (this.interpreter.adaptivePredict(this._input, 6, this._ctx)) {
        case 1:
          _localctx = new MemberInvocationContext(_localctx);
          this.enterOuterAlt(_localctx, 1);
          {
            this.state = 108;
            this.identifier();
          }
          break;
